Bug 192230 - crashes while i was away
Summary: crashes while i was away
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-10 15:02 UTC by Jakub Holý
Modified: 2009-05-26 12:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jakub Holý 2009-05-10 15:02:13 UTC
Version:           Version 1.65.0 Using KDE 4.2.3 (KDE 4.2.3) "release 116" (using Devel)
OS:                Linux
Installed from:    Compiled sources

i let womething to be burned, went buy somethng to eat, and then i saw a crash report.
the files seem to be burned OK.

Aplikace: K3b (k3b), signál SIGSEGV
[?1034h[Thread debugging using libthread_db enabled]
0x00007f3203382ce1 in nanosleep () from /lib64/libc.so.6
[Current thread is 1 (Thread 0x7f320c8ea750 (LWP 14192))]

Thread 4 (Thread 0x7f31f61cf950 (LWP 14193)):
#0  0x00007f32033ad662 in select () from /lib64/libc.so.6
#1  0x00007f320bc13366 in ?? () from /usr/lib64/libQtCore.so.4
#2  0x00007f320bb4af72 in ?? () from /usr/lib64/libQtCore.so.4
#3  0x00007f320b8d7070 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f32033b410d in clone () from /lib64/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f31f4f1b950 (LWP 14448)):
#0  0x00007f32033ad662 in select () from /lib64/libc.so.6
#1  0x00007f320c20c7f6 in K3bQProcessManager::run() () from /usr/lib64/libk3b.so.6
#2  0x00007f320bb4af72 in ?? () from /usr/lib64/libQtCore.so.4
#3  0x00007f320b8d7070 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f32033b410d in clone () from /lib64/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f31f59ce950 (LWP 14522)):
#0  0x00007f320b8dafdd in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f320bb4a9c5 in ?? () from /usr/lib64/libQtCore.so.4
#2  0x00007f320bb4ab76 in QThread::sleep(unsigned long) () from /usr/lib64/libQtCore.so.4
#3  0x00007f320c2016df in K3b::MediaCache::PollThread::run() () from /usr/lib64/libk3b.so.6
#4  0x00007f320bb4af72 in ?? () from /usr/lib64/libQtCore.so.4
#5  0x00007f320b8d7070 in start_thread () from /lib64/libpthread.so.0
#6  0x00007f32033b410d in clone () from /lib64/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f320c8ea750 (LWP 14192)):
[KCrash Handler]
#5  0x00007f320c1f5da8 in K3b::ChecksumPipe::checksum() const () from /usr/lib64/libk3b.so.6
#6  0x00007f320c26910e in K3b::DataJob::slotWriterJobFinished(bool) () from /usr/lib64/libk3b.so.6
#7  0x00007f320c26ad6f in K3b::DataJob::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libk3b.so.6
#8  0x00007f320bc47454 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQtCore.so.4
#9  0x00007f320c1db7a2 in K3b::Job::finished(bool) () from /usr/lib64/libk3b.so.6
#10 0x00007f320c1dc723 in K3b::Job::jobFinished(bool) () from /usr/lib64/libk3b.so.6
#11 0x00007f320c222cdb in K3b::CdrecordWriter::slotProcessExited(int, QProcess::ExitStatus) () from /usr/lib64/libk3b.so.6
#12 0x00007f320c2237b4 in K3b::CdrecordWriter::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libk3b.so.6
#13 0x00007f320bc47454 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQtCore.so.4
#14 0x00007f320c204e4f in K3bQProcess::finished(int, QProcess::ExitStatus) () from /usr/lib64/libk3b.so.6
#15 0x00007f320c209bda in K3bQProcessPrivate::_q_processDied() () from /usr/lib64/libk3b.so.6
#16 0x00007f320c209c81 in K3bQProcess::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libk3b.so.6
#17 0x00007f320c20a59d in K3bKProcess::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libk3b.so.6
#18 0x00007f320c204a75 in K3b::Process::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libk3b.so.6
#19 0x00007f320bc47454 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQtCore.so.4
#20 0x00007f320bc7e08e in QSocketNotifier::activated(int) () from /usr/lib64/libQtCore.so.4
#21 0x00007f320bc4cfa3 in QSocketNotifier::event(QEvent*) () from /usr/lib64/libQtCore.so.4
#22 0x00007f32064371bd in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#23 0x00007f320643ef8a in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#24 0x00007f320b09661b in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#25 0x00007f320bc33091 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#26 0x00007f320bc5b769 in ?? () from /usr/lib64/libQtCore.so.4
#27 0x00007f3202c480fb in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#28 0x00007f3202c4b8cd in ?? () from /usr/lib64/libglib-2.0.so.0
#29 0x00007f3202c4ba8b in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#30 0x00007f320bc5b50e in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#31 0x00007f32064c79bf in ?? () from /usr/lib64/libQtGui.so.4
#32 0x00007f320bc319a2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#33 0x00007f320bc31b2d in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#34 0x00007f320684f175 in QDialog::exec() () from /usr/lib64/libQtGui.so.4
#35 0x000000000052feda in K3b::JobProgressDialog::startJob(K3b::Job*) ()
#36 0x00000000004cb852 in K3b::ProjectBurnDialog::slotStartClicked() ()
#37 0x000000000049ae33 in K3b::DataBurnDialog::slotStartClicked() ()
#38 0x000000000053c695 in K3b::InteractionDialog::slotStartClickedInternal() ()
#39 0x000000000053ce92 in K3b::InteractionDialog::qt_metacall(QMetaObject::Call, int, void**) ()
#40 0x00000000004cb3a5 in K3b::ProjectBurnDialog::qt_metacall(QMetaObject::Call, int, void**) ()
#41 0x00000000004997ae in K3b::DataBurnDialog::qt_metacall(QMetaObject::Call, int, void**) ()
#42 0x00007f320bc47454 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQtCore.so.4
#43 0x00007f32069bc617 in QAbstractButton::clicked(bool) () from /usr/lib64/libQtGui.so.4
#44 0x00007f3206740aab in ?? () from /usr/lib64/libQtGui.so.4
#45 0x00007f3206742622 in ?? () from /usr/lib64/libQtGui.so.4
#46 0x00007f3206742875 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/libQtGui.so.4
#47 0x00007f32064897a9 in QWidget::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#48 0x00007f32064371bd in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#49 0x00007f320643f7fa in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#50 0x00007f320b09661b in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#51 0x00007f320bc33091 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#52 0x00007f320643eb98 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&) () from /usr/lib64/libQtGui.so.4
#53 0x00007f32064a3059 in ?? () from /usr/lib64/libQtGui.so.4
#54 0x00007f32064a1a77 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/libQtGui.so.4
#55 0x00007f32064c8214 in ?? () from /usr/lib64/libQtGui.so.4
#56 0x00007f3202c480fb in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#57 0x00007f3202c4b8cd in ?? () from /usr/lib64/libglib-2.0.so.0
#58 0x00007f3202c4ba8b in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#59 0x00007f320bc5b4ef in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#60 0x00007f32064c79bf in ?? () from /usr/lib64/libQtGui.so.4
#61 0x00007f320bc319a2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#62 0x00007f320bc31b2d in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#63 0x00007f320684f175 in QDialog::exec() () from /usr/lib64/libQtGui.so.4
#64 0x0000000000496e03 in K3b::DataView::slotBurn() ()
#65 0x00000000004c68a5 in K3b::View::qt_metacall(QMetaObject::Call, int, void**) ()
#66 0x00000000004c8ab6 in K3b::StandardView::qt_metacall(QMetaObject::Call, int, void**) ()
#67 0x0000000000495e75 in K3b::DataView::qt_metacall(QMetaObject::Call, int, void**) ()
#68 0x00007f320bc47454 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQtCore.so.4
#69 0x00007f3206431527 in QAction::triggered(bool) () from /usr/lib64/libQtGui.so.4
#70 0x00007f3206431cf0 in QAction::activate(QAction::ActionEvent) () from /usr/lib64/libQtGui.so.4
#71 0x00007f32067425da in ?? () from /usr/lib64/libQtGui.so.4
#72 0x00007f3206742875 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/libQtGui.so.4
#73 0x00007f320680a0ba in QToolButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/libQtGui.so.4
#74 0x00007f32064897a9 in QWidget::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#75 0x00007f32064371bd in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#76 0x00007f320643f7fa in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#77 0x00007f320b09661b in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#78 0x00007f320bc33091 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#79 0x00007f320643eb98 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&) () from /usr/lib64/libQtGui.so.4
#80 0x00007f32064a3059 in ?? () from /usr/lib64/libQtGui.so.4
#81 0x00007f32064a1a77 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/libQtGui.so.4
#82 0x00007f32064c8214 in ?? () from /usr/lib64/libQtGui.so.4
#83 0x00007f3202c480fb in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#84 0x00007f3202c4b8cd in ?? () from /usr/lib64/libglib-2.0.so.0
#85 0x00007f3202c4ba8b in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#86 0x00007f320bc5b4ef in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#87 0x00007f32064c79bf in ?? () from /usr/lib64/libQtGui.so.4
#88 0x00007f320bc319a2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#89 0x00007f320bc31b2d in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#90 0x00007f320bc33ffd in QCoreApplication::exec() () from /usr/lib64/libQtCore.so.4
#91 0x0000000000526f57 in main ()
Comment 1 Sebastian Trueg 2009-05-26 12:28:46 UTC
SVN commit 973028 by trueg:

Cache the checksum instead of using the ChecksumPipe directly since that might already have been deleted.

BUG: 192230


 M  +7 -3      k3bdatajob.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=973028