Cache the checksum instead of using the ChecksumPipe directly since that might already have been deleted.

BUG: 192230

svn path=/trunk/extragear/multimedia/k3b/; revision=973028